// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator output When mounted When the formatter fails With an invalid input error Renders correctly 1`] = `
<Fragment>
  Invalid input
</Fragment>
`;

exports[`Calculator output When mounted When the formatter fails With an out of bounds error Renders correctly 1`] = `
<Fragment>
  Cannot calculate that input (over 99999.99 or less than 0)
</Fragment>
`;

exports[`Calculator output When mounted When the formatter fails With any other error Renders correctly 1`] = `
<Fragment>
  Internal error
</Fragment>
`;

exports[`Calculator output When mounted When the formatter succeeds Renders correctly 1`] = `
<Fragment>
  The result: 
  MOCK OUTPUT WORDS
</Fragment>
`;

exports[`Calculator output When mounted With no input text Renders correctly 1`] = `
<Fragment>
  Enter a number to calculate
</Fragment>
`;
